--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-9 col-lg-8 mx-auto">
-                <h1 class="login-heading mb-4" style="color: #56638f;">Gasoducto</h1>
+                <h1 class="login-heading mb-4" style="color: #56638f;">Gasoducto del Caribe</h1>
                 <hr>
                 <h5 class="login-heading mb-4 tit" style="color: #7796CB;">Enter your information</h5>
                 <form action="./op.html">
