--- a/public/result.html
+++ b/public/result.html
@@ -14,6 +14,9 @@
 <body>
     <div class= "background"></div>
     <ul class="navbar">
+      <div class="company">
+        <li class="navitem navitem1"><a href="index.html">GASODUCTO DEL CARIBE</a></li>  
+      </div>
       <li class="navitem"><a href="index.html">Sign In</a></li>
       <li class="navitem"><a href="op.html">Operators List</a></li>
       <li class="navitem"><a href="question.html">Questionary</a></li>
